--- a/src/Settings/App.SettingsGroup.json
+++ b/src/Settings/App.SettingsGroup.json
@@ -160,7 +160,7 @@
     "shortDescription": "Application color scheme",
     "longDescription":  "The color scheme for the user interface.",
     "type":             "uint32",
-    "enumStrings":      "Indoor,Outdoor",
+    "enumStrings":      "Modo Escuro,Modo Claro",
     "enumValues":       "1,0",
     "defaultValue":     0
 },
@@ -216,7 +216,7 @@
     "name":             "followTarget",
     "shortDescription": "Stream GCS' coordinates to Autopilot",
     "type":             "uint32",
-    "enumStrings":      "Never,Always,When in Follow Me Flight Mode",
+    "enumStrings":      "Nunca,Sempre,Quando no modo de voo Siga-me",
     "enumValues":       "0,1,2",
     "defaultValue":     2
 },
