test view flightModeMenu

--- a/src/ui/CMakeLists.txt
+++ b/src/ui/CMakeLists.txt
@@ -20,6 +20,7 @@ add_custom_target(uiQml
 		AppSettings.qml
 		ExitWithErrorWindow.qml
 		MainRootWindow.qml
+		MainStatusIndicator.qml
 )
 
 target_link_libraries(ui
