--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -33,11 +33,11 @@
             <meta-data android:value="@string/fatal_error_msg" android:name="android.app.fatal_error_msg"/>
             <!--  Messages maps -->
 
-            <Splash screen>
-            <
-            <meta-data android:name="android.app.splash_screen_drawable" android:resource="@drawable/icon"/>
-            >
-            <Splash screen >
+            <!-- Splash screen -->
+            <!--
+            <meta-data android:name="android.app.splash_screen_drawable" android:resource="@drawable/logo"/>
+            -->
+            <!-- Splash screen -->
 
             <!-- Background running -->
             <!-- Warning: changing this value to true may cause unexpected crashes if the
