new test action

--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -45,7 +45,7 @@ jobs:
         GSTREAMER_NAME: ${{ matrix.config.GSTREAMER_NAME }}
         GSTREAMER_VERSION: 1.14.4
         ANDROID_HOME: /usr/local/lib/android/sdk
-        ANDROID_NDK_PLATFORM: android-29
+        
       run: |
         set -o xtrace
         
@@ -57,6 +57,8 @@ jobs:
                 
         rm -rf /tmp/shadow_build_dir
 
+        export sdk_version=sdk-tools-linux-4333796.zip
+        
         sudo $ANDROID_HOME/tools/bin/sdkmanager "build-tools;25.0.3" "platforms;android-29" "platform-tools" > /dev/null
         
         wget --quiet https://gstreamer.freedesktop.org/data/pkg/android/${GSTREAMER_VERSION}/gstreamer-1.0-android-universal-${GSTREAMER_VERSION}.tar.bz2 &&
