--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -57,7 +57,7 @@ jobs:
                 
         rm -rf /tmp/shadow_build_dir
 
-        sudo $ANDROID_HOME/tools/bin/sdkmanager "build-tools;25.0.3" "platforms;android-29" "platform-tools" > /dev/null
+        sudo $ANDROID_HOME/tools/bin/sdkmanager "build-tools;25.0.3" "platforms;android-29" "platform-tools"
         
         wget --quiet https://gstreamer.freedesktop.org/data/pkg/android/${GSTREAMER_VERSION}/gstreamer-1.0-android-universal-${GSTREAMER_VERSION}.tar.bz2 &&
         mkdir gstreamer-1.0-android-universal-${GSTREAMER_VERSION} &&
@@ -66,7 +66,7 @@ jobs:
         if [ ! -f "/tmp/android-ndk-r20-linux-x86_64.zip" ]; then
             wget -N --quiet https://dl.google.com/android/repository/android-ndk-r20-linux-x86_64.zip -O /tmp/android-ndk-r20-linux-x86_64.zip
         fi
-        unzip /tmp/android-ndk-r20-linux-x86_64.zip > /dev/null
+        unzip /tmp/android-ndk-r20-linux-x86_64.zip
         export ANDROID_NDK_ROOT=`pwd`/android-ndk-r20 
         export ANDROID_SDK_ROOT=/usr/local/lib/android/sdk
         export PATH=`pwd`/android-ndk-r20:$PATH
