--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -57,7 +57,7 @@ jobs:
                 
         rm -rf /tmp/shadow_build_dir
 
-        sudo $ANDROID_HOME/tools/bin/sdkmanager "build-tools;25.0.3" "platforms;android-29" "platform-tools"
+        sudo $ANDROID_HOME/tools/bin/sdkmanager "build-tools;25.0.3" "platforms;android-29" "platform-tools" > /dev/null
         
         wget --quiet https://gstreamer.freedesktop.org/data/pkg/android/${GSTREAMER_VERSION}/gstreamer-1.0-android-universal-${GSTREAMER_VERSION}.tar.bz2 &&
         mkdir gstreamer-1.0-android-universal-${GSTREAMER_VERSION} &&
@@ -66,10 +66,10 @@ jobs:
         if [ ! -f "/tmp/android-ndk-r20-linux-x86_64.zip" ]; then
             wget -N --quiet https://dl.google.com/android/repository/android-ndk-r20-linux-x86_64.zip -O /tmp/android-ndk-r20-linux-x86_64.zip
         fi
-        unzip /tmp/android-ndk-r20-linux-x86_64.zip
+        unzip /tmp/android-ndk-r20-linux-x86_64.zip > /dev/null
         export ANDROID_NDK_ROOT=`pwd`/android-ndk-r20 
         export ANDROID_SDK_ROOT=/usr/local/lib/android/sdk
-        export PATH=`pwd`/android-ndk-r20:$PATH
+        export PATH="${ANDROID_HOME}/cmake/3.10.2.4988404/bin:$PATH"
         
         if [ "$BITNESS" == "64" ]; then
             if [ ! -f "/tmp/Qt5.12.6-android_arm64_v8a-min.tar.bz2" ]; then
