--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -1,132 +1,116 @@
-# The 32 bit version of QGroundControl
-name: Android 32-bit Release
+name: C/C++ CI debug
 
-on:
-  push:
-    branches:
-      - 'main'
-      - 'master'
-      - 'Stable*'
-    paths-ignore:
-      - 'README.md'
-    tags:
-      - 'v*'
-  pull_request:
-    branches:
-    - '*'
-
-defaults:
-  run:
-    shell: bash
-
-env:
-  SOURCE_DIR:   ${{ github.workspace }}
-  QT_VERSION:   5.15.2
-  ARTIFACT:     QGroundControl32.apk
-  BUILD_TYPE:   ${{ fromJSON('["DailyBuild", "StableBuild"]')[ github.ref_type == 'tag' || contains(github.ref, 'Stable_' ) ] }}
-  ANDROID_KEYSTORE_PASSWORD: vant2023
+on: [push, workflow_dispatch]
 
 jobs:
   build:
-    runs-on:  ubuntu-20.04
+
+    runs-on: ubuntu-20.04
+    strategy:
+      matrix: 
+        config: [ { BITNESS: '32', GSTREAMER_NAME: 'armv7', CONFIG: 'installer' }, { BITNESS: '64', GSTREAMER_NAME: 'arm64', CONFIG: 'installer' } ]
+    defaults:
+      run:
+        shell: bash
 
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v2
-      
-      - name: Get all tags for correct version determination
-        working-directory:  ${{ github.workspace }}
-        run: |
-          git fetch --all --tags -f
-
-      - name: Install Qt
-        uses: jurplel/install-qt-action@v3
-        with:
-          version:      ${{ env.QT_VERSION }}
-          host:         linux
-          target:       android
-          dir:          ${{ runner.temp }}
-          modules:      qtcharts
-          setup-python: true
-
-      - name: Install Android NDK
-        uses: nttld/setup-ndk@v1
-        id: setup-ndk
-        with:
-          ndk-version: r21e
-          add-to-path: false
-
-      - name: Remove Android SDKs to force usage of android-33 only
-        run: |
-            ${ANDROID_SDK_ROOT}/cmdline-tools/latest/bin/sdkmanager --uninstall "platforms;android-33-ext5"
-            ${ANDROID_SDK_ROOT}/cmdline-tools/latest/bin/sdkmanager --uninstall "platforms;android-33-ext4"
-            ${ANDROID_SDK_ROOT}/cmdline-tools/latest/bin/sdkmanager --uninstall "platforms;android-34"
-            ${ANDROID_SDK_ROOT}/cmdline-tools/latest/bin/sdkmanager --uninstall "platforms;android-34-ext8"
-            ${ANDROID_SDK_ROOT}/cmdline-tools/latest/bin/sdkmanager --uninstall "platforms;android-34-ext10"
-
-      - name: Install ccache
-        run: sudo apt-get install ccache
-
-      - name: Prepare ccache timestamp
-        id: ccache_cache_timestamp
-        shell: cmake -P {0}
-        run: |
-          string(TIMESTAMP current_date "%Y-%m-%d-%H;%M;%S" UTC)
-          message("::set-output name=timestamp::${current_date}")
-
-      - name: ccache cache files
-        uses: actions/cache@v2
-        with:
-          path:         ~/.ccache
-          key:          ${{ runner.os }}-ccache-${{steps.ccache_cache_timestamp.outputs.timestamp}}
-          restore-keys: ${{ runner.os }}-ccache-
-
-      - name: Setup ccache
-        run: |
-            mkdir -p ~/.ccache
-            echo "base_dir = ${GITHUB_WORKSPACE}" > ~/.ccache/ccache.conf
-            echo "compression = true" >> ~/.ccache/ccache.conf
-            echo "compression_level = 5" >> ~/.ccache/ccache.conf
-            ccache -s
-            ccache -z
-
-      - name: Create build directory
-        run:  mkdir ${{ runner.temp }}/shadow_build_dir
-
-      - name:               Install gstreamer
-        working-directory:  ${{ github.workspace }}
-        run: |
-            wget --quiet https://gstreamer.freedesktop.org/data/pkg/android/1.18.6/gstreamer-1.0-android-universal-1.18.6.tar.xz
-            mkdir gstreamer-1.0-android-universal-1.18.6
-            tar xf gstreamer-1.0-android-universal-1.18.6.tar.xz -C gstreamer-1.0-android-universal-1.18.6
-
-      - name: Git Branch name
-        id:   git-branch-name
-        uses: EthanSK/git-branch-name-action@v1
-
-      - name: Update android manifest
-        run: |
-          if [ $GIT_BRANCH_NAME != "Stable*" ]; then
-            ${SOURCE_DIR}/tools/update_android_manifest_package.sh ${GIT_BRANCH_NAME}
-          fi
-
-      - name: Build
-        working-directory: ${{ runner.temp }}/shadow_build_dir
-        env:
-          ANDROID_KEYSTORE_PASSWORD: ${{ env.ANDROID_KEYSTORE_PASSWORD }}
-          ANDROID_NDK_ROOT: ${{ steps.setup-ndk.outputs.ndk-path }}
-          ANDROID_NDK_HOME: ${{ steps.setup-ndk.outputs.ndk-path }}
-          ANDROID_NDK_LATEST_HOME: ${{ steps.setup-ndk.outputs.ndk-path }}
-          ANDROID_NDK: ${{ steps.setup-ndk.outputs.ndk-path }}
-        run:  |
-            qmake -r ${SOURCE_DIR}/qgroundcontrol.pro -spec android-clang CONFIG+=${BUILD_TYPE} CONFIG+=installer ANDROID_ABIS="armeabi-v7a"
-            make -j2
+    - uses: actions/checkout@v2
+    - name: apt
+      run: sudo apt-get update && sudo apt-get install wget curl    speech-dispatcher    libgstreamer-plugins-base1.0-dev     libgstreamer1.0-0:amd64     libgstreamer1.0-dev     libudev-dev android-sdk ccache
+    - name: Set up JDK 1.8
+      uses: joschi/setup-jdk@v2
+      with:
+          java-version: 8
+    - name: ccache
+      uses: hendrikmuhs/ccache-action@v1.2
+      with:
+        key: ccache-${{ runner.os }}-${{ matrix.config.BITNESS }}
+    - name: Cache zips
+      uses: actions/cache@v3
+      with:
+        path: |
+          /home/runner/.gradle
+          /tmp/android-ndk-r20-linux-x86_64.zip
+          /tmp/Qt5.12.6-android_arm64_v8a-min.tar.bz2
+          /tmp/Qt5.12.6-android_armv7-min.tar.bz2
+        key: ${{ runner.os }}-${{ matrix.config.BITNESS }}
+    - name: configure
+      env: 
+        JOBS: 16
+        SHADOW_BUILD_DIR: /tmp/shadow_build_dir
+        CODESIGN: nocodesign
+        SPEC: android-clang
+        CONFIG: ${{ matrix.config.CONFIG }}
+        BITNESS: ${{ matrix.config.BITNESS }}
+        GSTREAMER_NAME: ${{ matrix.config.GSTREAMER_NAME }}
+        GSTREAMER_VERSION: 1.14.4
+        ANDROID_HOME: /usr/local/lib/android/sdk
+        ANDROID_NDK_PLATFORM: android-29
+      run: |
+        set -o xtrace
         
-      - name: ccache post-run
-        run:  ccache -s
+        export PATH=$ANDROID_HOME/tools/bin:/opt/java/jdk1.8.0_131/bin:$PATH          
+        
+        ccache -s
 
-      - name: Save artifact
-        uses: actions/upload-artifact@master
-        with:
-          name: ${{ env.ARTIFACT }}
-          path: ${{ runner.temp }}/shadow_build_dir/package/${{ env.ARTIFACT }}
+        git submodule update --init --recursive
+                
+        rm -rf /tmp/shadow_build_dir
+
+        sudo $ANDROID_HOME/tools/bin/sdkmanager "build-tools;25.0.3" "platforms;android-29" "platform-tools" > /dev/null
+        
+        wget --quiet https://gstreamer.freedesktop.org/data/pkg/android/${GSTREAMER_VERSION}/gstreamer-1.0-android-universal-${GSTREAMER_VERSION}.tar.bz2 &&
+        mkdir gstreamer-1.0-android-universal-${GSTREAMER_VERSION} &&
+        tar xf gstreamer-1.0-android-universal-${GSTREAMER_VERSION}.tar.bz2 -C gstreamer-1.0-android-universal-${GSTREAMER_VERSION}
+        
+        if [ ! -f "/tmp/android-ndk-r20-linux-x86_64.zip" ]; then
+            wget -N --quiet https://dl.google.com/android/repository/android-ndk-r20-linux-x86_64.zip -O /tmp/android-ndk-r20-linux-x86_64.zip
+        fi
+        unzip /tmp/android-ndk-r20-linux-x86_64.zip > /dev/null
+        export ANDROID_NDK_ROOT=`pwd`/android-ndk-r20 
+        export ANDROID_SDK_ROOT=/usr/local/lib/android/sdk
+        export PATH=`pwd`/android-ndk-r20:$PATH
+        
+        if [ "$BITNESS" == "64" ]; then
+            if [ ! -f "/tmp/Qt5.12.6-android_arm64_v8a-min.tar.bz2" ]; then
+                wget --quiet https://s3-us-west-2.amazonaws.com/qgroundcontrol/dependencies/Qt5.12.6-android_arm64_v8a-min.tar.bz2 -O /tmp/Qt5.12.6-android_arm64_v8a-min.tar.bz2
+            fi
+            tar jxf /tmp/Qt5.12.6-android_arm64_v8a-min.tar.bz2 -C /tmp 
+            export PATH=/tmp/Qt5.12-android_arm64_v8a/5.12.6/android_arm64_v8a/bin:$PATH
+        fi
+        
+        if [ "$BITNESS" == "32" ]; then
+            if [ ! -f "/tmp/Qt5.12.6-android_armv7-min.tar.bz2" ]; then
+                wget -N --quiet https://s3-us-west-2.amazonaws.com/qgroundcontrol/dependencies/Qt5.12.6-android_armv7-min.tar.bz2 -O /tmp/Qt5.12.6-android_armv7-min.tar.bz2
+            fi
+            tar jxf /tmp/Qt5.12.6-android_armv7-min.tar.bz2 -C /tmp
+            export PATH=/tmp/Qt5.12-android_armv7/5.12.6/android_armv7/bin:$PATH
+        fi
+        
+        ./tools/update_android_version.sh ${BITNESS} notmaster
+        
+        java -version
+        gradle --version
+        cd android
+        ./gradlew --version
+        cd ..
+        
+        mkdir -p ${SHADOW_BUILD_DIR} 
+        cd ${SHADOW_BUILD_DIR}
+        
+        export STABLE_OR_DAILY=StableBuild
+        
+        qmake -r $GITHUB_WORKSPACE/qgroundcontrol.pro CONFIG+=${CONFIG} CONFIG+=${STABLE_OR_DAILY} CONFIG+=ccache -spec ${SPEC}
+               
+        make VERBOSE=1 install INSTALL_ROOT=./release/android-build/
+        
+        ccache -s
+
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: ${{ matrix.config.BITNESS }}.zip
+        # A file, directory or wildcard pattern that describes what to upload
+        path: |
+          /tmp/shadow_build_dir/release/android-build/build/outputs/
+          /tmp/shadow_build_dir/debug/android-build/build/outputs/
