--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -44,7 +44,7 @@ jobs:
         BITNESS: ${{ matrix.config.BITNESS }}
         GSTREAMER_NAME: ${{ matrix.config.GSTREAMER_NAME }}
         GSTREAMER_VERSION: 1.14.4
-        ANDROID_HOME: /usr/lib/android
+        ANDROID_HOME: /usr/lib/android-sdk
         ANDROID_NDK_PLATFORM: android-29
       run: |
         set -o xtrace
