--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -44,7 +44,7 @@ jobs:
         BITNESS: ${{ matrix.config.BITNESS }}
         GSTREAMER_NAME: ${{ matrix.config.GSTREAMER_NAME }}
         GSTREAMER_VERSION: 1.14.4
-        ANDROID_HOME: /usr/lib/android-sdk
+        ANDROID_HOME: /usr/local/lib/android-sdk
         ANDROID_NDK_PLATFORM: android-29
       run: |
         set -o xtrace
@@ -68,7 +68,7 @@ jobs:
         fi
         unzip /tmp/android-ndk-r20-linux-x86_64.zip > /dev/null
         export ANDROID_NDK_ROOT=`pwd`/android-ndk-r20 
-        export ANDROID_SDK_ROOT=/usr/lib/android/sdk
+        export ANDROID_SDK_ROOT=/usr/local/lib/android/sdk
         export PATH=`pwd`/android-ndk-r20:$PATH
         
         if [ "$BITNESS" == "64" ]; then
