--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -16,7 +16,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: apt
-      run: sudo apt-get update && sudo apt-get install wget curl    speech-dispatcher    libgstreamer-plugins-base1.0-dev     libgstreamer1.0-0:amd64     libgstreamer1.0-dev     libudev-dev android-sdk ccache    android-sdk
+      run: sudo apt-get update && sudo apt-get install wget curl    speech-dispatcher    libgstreamer-plugins-base1.0-dev     libgstreamer1.0-0:amd64     libgstreamer1.0-dev     libudev-dev android-sdk
     - name: Set up JDK 1.8
       uses: joschi/setup-jdk@v2
       with:
@@ -44,7 +44,7 @@ jobs:
         BITNESS: ${{ matrix.config.BITNESS }}
         GSTREAMER_NAME: ${{ matrix.config.GSTREAMER_NAME }}
         GSTREAMER_VERSION: 1.14.4
-        ANDROID_HOME: /Users%User%/AppData/Local/Android/Sdk
+        ANDROID_HOME: /usr/local/lib/android-sdk
         ANDROID_NDK_PLATFORM: android-29
       run: |
         set -o xtrace
