--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -29,7 +29,7 @@ jobs:
       uses: actions/cache@v3
       with:
         path: |
-          /home/runner/.gradle
+          /home/runner/
           /tmp/android-ndk-r20-linux-x86_64.zip
           /tmp/Qt5.12.6-android_arm64_v8a-min.tar.bz2
           /tmp/Qt5.12.6-android_armv7-min.tar.bz2
