--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -1,121 +1,129 @@
 name: C/C++ CI debug
 
-on: [push, workflow_dispatch]
+on:
+  push:
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-20.04
     strategy:
-      matrix: 
-        config: [ { BITNESS: '32', GSTREAMER_NAME: 'armv7', CONFIG: 'installer' }, { BITNESS: '64', GSTREAMER_NAME: 'arm64', CONFIG: 'installer' } ]
+      matrix:
+        config: 
+          - { BITNESS: '32', GSTREAMER_NAME: 'armv7', CONFIG: 'installer' }
+          - { BITNESS: '64', GSTREAMER_NAME: 'arm64', CONFIG: 'installer' }
     defaults:
       run:
         shell: bash
 
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
+      
+      # Adicionando a etapa para instalar o Git
+      - name: Install Git
+        run: sudo apt-get install git -y
 
-    - name: Update apt cache
-      run: sudo apt-get update
+      - name: Update apt cache
+        run: sudo apt-get update
 
-    - name: Install dependencies
-      run: sudo apt-get install -y wget curl speech-dispatcher libgstreamer-plugins-base1.0-dev libgstreamer1.0-0:amd64 libgstreamer1.0-dev libudev-dev android-sdk ccache
+      - name: Install dependencies
+        run: sudo apt-get install -y wget curl speech-dispatcher libgstreamer-plugins-base1.0-dev libgstreamer1.0-0:amd64 libgstreamer1.0-dev libudev-dev android-sdk ccache
 
-    - name: Set up JDK 1.8
-      uses: joschi/setup-jdk@v2
-      with:
-          java-version: 8
+      - name: Set up JDK 1.8
+        uses: joschi/setup-jdk@v2
+        with:
+            java-version: 8
 
-    - name: ccache
-      uses: hendrikmuhs/ccache-action@v1.2
-      with:
-        key: ccache-${{ runner.os }}-${{ matrix.config.BITNESS }}
+      - name: ccache
+        uses: hendrikmuhs/ccache-action@v1.2
+        with:
+          key: ccache-${{ runner.os }}-${{ matrix.config.BITNESS }}
 
-    - name: Verify ccache setup
-      run: ccache -s
+      - name: Verify ccache setup
+        run: ccache -s
 
-    - name: Cache zips
-      uses: actions/cache@v3
-      with:
-        path: |
-          /tmp/android-ndk-r20-linux-x86_64.zip
-          /tmp/Qt5.12.6-android_arm64_v8a-min.tar.bz2
-          /tmp/Qt5.12.6-android_armv7-min.tar.bz2
-        key: ${{ runner.os }}-${{ matrix.config.BITNESS }}
+      - name: Cache zips
+        uses: actions/cache@v3
+        with:
+          path: |
+            /tmp/android-ndk-r20-linux-x86_64.zip
+            /tmp/Qt5.12.6-android_arm64_v8a-min.tar.bz2
+            /tmp/Qt5.12.6-android_armv7-min.tar.bz2
+          key: ${{ runner.os }}-${{ matrix.config.BITNESS }}
 
-    - name: configure
-      env: 
-        JOBS: 16
-        SHADOW_BUILD_DIR: /tmp/shadow_build_dir
-        CODESIGN: nocodesign
-        SPEC: android-clang
-        CONFIG: ${{ matrix.config.CONFIG }}
-        BITNESS: ${{ matrix.config.BITNESS }}
-        GSTREAMER_NAME: ${{ matrix.config.GSTREAMER_NAME }}
-        GSTREAMER_VERSION: 1.14.4
-        ANDROID_HOME: /usr/local/lib/android
-        ANDROID_NDK_PLATFORM: android-29
-      run: |
-        set -o xtrace
-        export PATH=$ANDROID_HOME/tools/bin        
+      - name: configure
+        env: 
+          JOBS: 16
+          SHADOW_BUILD_DIR: /tmp/shadow_build_dir
+          CODESIGN: nocodesign
+          SPEC: android-clang
+          CONFIG: ${{ matrix.config.CONFIG }}
+          BITNESS: ${{ matrix.config.BITNESS }}
+          GSTREAMER_NAME: ${{ matrix.config.GSTREAMER_NAME }}
+          GSTREAMER_VERSION: 1.14.4
+          ANDROID_HOME: /usr/local/lib/android
+          ANDROID_NDK_PLATFORM: android-29
+        run: |
+          set -o xtrace
+          export PATH=$ANDROID_HOME/tools/bin        
         
-        git submodule update --init --recursive
+          git submodule update --init --recursive
+                  
+          rm -rf /tmp/shadow_build_dir
+      
+          sudo $ANDROID_HOME/tools/bin/sdkmanager "build-tools;25.0.3" "platforms;android-29" "platform-tools" > /dev/null 2>&1
+          
+          wget --quiet https://gstreamer.freedesktop.org/data/pkg/android/${GSTREAMER_VERSION}/gstreamer-1.0-android-universal-${GSTREAMER_VERSION}.tar.bz2 &&
+          mkdir gstreamer-1.0-android-universal-${GSTREAMER_VERSION} &&
+          tar xf gstreamer-1.0-android-universal-${GSTREAMER_VERSION}.tar.bz2 -C gstreamer-1.0-android-universal-${GSTREAMER_VERSION}
+          
+          if [ ! -f "/tmp/android-ndk-r20-linux-x86_64.zip" ]; then
+              wget -N --quiet https://dl.google.com/android/repository/android-ndk-r20-linux-x86_64.zip -O /tmp/android-ndk-r20-linux-x86_64.zip
+          fi
+          unzip /tmp/android-ndk-r20-linux-x86_64.zip > /dev/null
+          export ANDROID_NDK_ROOT=`pwd`/android-ndk-r20 
+          export ANDROID_SDK_ROOT=/usr/local/lib/android/sdk
+          export PATH=`pwd`/android-ndk-r20:$PATH
+          
+          if [ "$BITNESS" == "64" ]; then
+              if [ ! -f "/tmp/Qt5.12.6-android_arm64_v8a-min.tar.bz2" ]; then
+                  wget --quiet https://s3-us-west-2.amazonaws.com/qgroundcontrol/dependencies/Qt5.12.6-android_arm64_v8a-min.tar.bz2 -O /tmp/Qt5.12.6-android_arm64_v8a-min.tar.bz2
+              fi
+              tar jxf /tmp/Qt5.12.6-android_arm64_v8a-min.tar.bz2 -C /tmp 
+              export PATH=/tmp/Qt5.12-android_arm64_v8a/5.12.6/android_arm64_v8a/bin:$PATH
+          fi
+          
+          if [ "$BITNESS" == "32" ]; then
+              if [ ! -f "/tmp/Qt5.12.6-android_armv7-min.tar.bz2" ]; then
+                  wget -N --quiet https://s3-us-west-2.amazonaws.com/qgroundcontrol/dependencies/Qt5.12.6-android_armv7-min.tar.bz2 -O /tmp/Qt5.12.6-android_armv7-min.tar.bz2
+              fi
+              tar jxf /tmp/Qt5.12.6-android_armv7-min.tar.bz2 -C /tmp
+              export PATH=/tmp/Qt5.12-android_armv7/5.12.6/android_armv7/bin:$PATH
+          fi
+          
+          ./tools/update_android_version.sh ${BITNESS} notmaster
+          
+          java -version
+          gradle --version
+          cd android
+          ./gradlew --version
+          cd ..
+          
+          mkdir -p ${SHADOW_BUILD_DIR} 
+          cd ${SHADOW_BUILD_DIR}
+          
+          export STABLE_OR_DAILY=StableBuild
+          
+          qmake -r $GITHUB_WORKSPACE/qgroundcontrol.pro CONFIG+=${CONFIG} CONFIG+=${STABLE_OR_DAILY} CONFIG+=ccache -spec ${SPEC}
                 
-        rm -rf /tmp/shadow_build_dir
-    
-        sudo $ANDROID_HOME/tools/bin/sdkmanager "build-tools;25.0.3" "platforms;android-29" "platform-tools" > /dev/null 2>&1
-        
-        wget --quiet https://gstreamer.freedesktop.org/data/pkg/android/${GSTREAMER_VERSION}/gstreamer-1.0-android-universal-${GSTREAMER_VERSION}.tar.bz2 &&
-        mkdir gstreamer-1.0-android-universal-${GSTREAMER_VERSION} &&
-        tar xf gstreamer-1.0-android-universal-${GSTREAMER_VERSION}.tar.bz2 -C gstreamer-1.0-android-universal-${GSTREAMER_VERSION}
-        
-        if [ ! -f "/tmp/android-ndk-r20-linux-x86_64.zip" ]; then
-            wget -N --quiet https://dl.google.com/android/repository/android-ndk-r20-linux-x86_64.zip -O /tmp/android-ndk-r20-linux-x86_64.zip
-        fi
-        unzip /tmp/android-ndk-r20-linux-x86_64.zip > /dev/null
-        export ANDROID_NDK_ROOT=`pwd`/android-ndk-r20 
-        export ANDROID_SDK_ROOT=/usr/local/lib/android/sdk
-        export PATH=`pwd`/android-ndk-r20:$PATH
-        
-        if [ "$BITNESS" == "64" ]; then
-            if [ ! -f "/tmp/Qt5.12.6-android_arm64_v8a-min.tar.bz2" ]; then
-                wget --quiet https://s3-us-west-2.amazonaws.com/qgroundcontrol/dependencies/Qt5.12.6-android_arm64_v8a-min.tar.bz2 -O /tmp/Qt5.12.6-android_arm64_v8a-min.tar.bz2
-            fi
-            tar jxf /tmp/Qt5.12.6-android_arm64_v8a-min.tar.bz2 -C /tmp 
-            export PATH=/tmp/Qt5.12-android_arm64_v8a/5.12.6/android_arm64_v8a/bin:$PATH
-        fi
-        
-        if [ "$BITNESS" == "32" ]; then
-            if [ ! -f "/tmp/Qt5.12.6-android_armv7-min.tar.bz2" ]; then
-                wget -N --quiet https://s3-us-west-2.amazonaws.com/qgroundcontrol/dependencies/Qt5.12.6-android_armv7-min.tar.bz2 -O /tmp/Qt5.12.6-android_armv7-min.tar.bz2
-            fi
-            tar jxf /tmp/Qt5.12.6-android_armv7-min.tar.bz2 -C /tmp
-            export PATH=/tmp/Qt5.12-android_armv7/5.12.6/android_armv7/bin:$PATH
-        fi
-        
-        ./tools/update_android_version.sh ${BITNESS} notmaster
-        
-        java -version
-        gradle --version
-        cd android
-        ./gradlew --version
-        cd ..
-        
-        mkdir -p ${SHADOW_BUILD_DIR} 
-        cd ${SHADOW_BUILD_DIR}
-        
-        export STABLE_OR_DAILY=StableBuild
-        
-        qmake -r $GITHUB_WORKSPACE/qgroundcontrol.pro CONFIG+=${CONFIG} CONFIG+=${STABLE_OR_DAILY} CONFIG+=ccache -spec ${SPEC}
-              
-        make VERBOSE=1 install INSTALL_ROOT=./release/android-build/
-        
-        ccache -s
+          make VERBOSE=1 install INSTALL_ROOT=./release/android-build/
+          
+          ccache -s
 
-    - name: Upload a Build Artifact
-      uses: actions/upload-artifact@v2
-      with:
-        name: ${{ matrix.config.BITNESS }}.zip
-        path: |
-          /tmp/shadow_build_dir/release/android-build/build/outputs/
-          /tmp/shadow_build_dir/debug/android-build/build/outputs/
+      - name: Upload a Build Artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: ${{ matrix.config.BITNESS }}.zip
+          path: |
+            /tmp/shadow_build_dir/release/android-build/build/outputs/
+            /tmp/shadow_build_dir/debug/android-build/build/outputs/
