--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -6,33 +6,30 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest # Alterado para usar a imagem de contêiner padrão do GitHub que inclui o Git
+
     strategy:
       matrix:
         config: 
           - { BITNESS: '32', GSTREAMER_NAME: 'armv7', CONFIG: 'installer' }
           - { BITNESS: '64', GSTREAMER_NAME: 'arm64', CONFIG: 'installer' }
+
     defaults:
       run:
         shell: bash
 
     steps:
       - uses: actions/checkout@v2
-      
-      # Adicionando a etapa para instalar o Git
-      - name: Install Git
-        run: sudo apt-get install git -y
-
-      - name: Update apt cache
-        run: sudo apt-get update
 
       - name: Install dependencies
-        run: sudo apt-get install -y wget curl speech-dispatcher libgstreamer-plugins-base1.0-dev libgstreamer1.0-0:amd64 libgstreamer1.0-dev libudev-dev android-sdk ccache
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y wget curl speech-dispatcher libgstreamer-plugins-base1.0-dev libgstreamer1.0-0:amd64 libgstreamer1.0-dev libudev-dev android-sdk ccache git # Adicionando a instalação do Git
 
       - name: Set up JDK 1.8
-        uses: joschi/setup-jdk@v2
+        uses: actions/setup-java@v1
         with:
-            java-version: 8
+          java-version: 8
 
       - name: ccache
         uses: hendrikmuhs/ccache-action@v1.2
