--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest # Alterado para usar a imagem de contêiner padrão do GitHub que inclui o Git
+    runs-on: ubuntu-20.04
 
     strategy:
       matrix:
@@ -25,7 +25,8 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y wget curl speech-dispatcher libgstreamer-plugins-base1.0-dev libgstreamer1.0-0:amd64 libgstreamer1.0-dev libudev-dev android-sdk ccache git # Adicionando a instalação do Git
-
+          git --version # Verificar se o Git está instalado corretamente
+          
       - name: Set up JDK 1.8
         uses: actions/setup-java@v1
         with:
