--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -23,7 +23,14 @@ jobs:
 
       - name: Install Git
         run: |
-          sudo apt-get update && sudo apt-get install -y git
+          sudo apt-get update
+          sudo apt-get install -y wget
+          wget https://github.com/git/git/archive/refs/tags/v2.33.1.tar.gz
+          tar -zxvf v2.33.1.tar.gz
+          cd git-2.33.1
+          sudo apt-get install -y make libssl-dev libghc-zlib-dev libcurl4-gnutls-dev libexpat1-dev gettext unzip
+          make prefix=/usr/local all
+          sudo make prefix=/usr/local install
 
 
       - name: Install dependencies
@@ -64,7 +71,7 @@ jobs:
           BITNESS: ${{ matrix.config.BITNESS }}
           GSTREAMER_NAME: ${{ matrix.config.GSTREAMER_NAME }}
           GSTREAMER_VERSION: 1.14.4
-          ANDROID_HOME: /usr/local/lib/android
+          ANDROID_HOME: /usr/lib/android
           ANDROID_NDK_PLATFORM: android-29
         run: |
           set -o xtrace
