--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -10,8 +10,7 @@ jobs:
 
     container:
       image: ubuntu:20.04
-      options: --user=root
-
+      
     strategy:
       matrix:
         config: 
@@ -27,8 +26,8 @@ jobs:
 
       - name: Install Git
         run: |
-          sudo apt-get update
-          sudo apt-get install -y git
+          apt-get update
+          apt-get install -y git
           
 
 
