--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -7,7 +7,6 @@ on:
 jobs:
   build:
     runs-on: ubuntu-20.04
-    
 
     strategy:
       matrix:
@@ -25,7 +24,7 @@ jobs:
       - name: Install Git
         run: |
           apt-get update
-          apt-get install -y git
+          apt-get install -y wget
           
 
 
