--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -27,9 +27,9 @@ jobs:
 
       - name: Install dependencies
         run: |
-          apt-get update
-          apt-get install -y wget curl speech-dispatcher libgstreamer-plugins-base1.0-dev libgstreamer1.0-0:amd64 libgstreamer1.0-dev libudev-dev android-sdk ccache git # Adicionando a instalação do Git
-          git --version # Verificar se o Git está instalado corretamente
+          sudo apt-get update
+          sudo apt-get install -y wget curl speech-dispatcher libgstreamer-plugins-base1.0-dev libgstreamer1.0-0:amd64 libgstreamer1.0-dev libudev-dev android-sdk ccache git # Adicionando a instalação do Git
+          git --version
           
       - name: Set up JDK 1.8
         uses: actions/setup-java@v1
