--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,15 +1,15 @@
 buildscript {
-
     repositories {
-        maven  {
+        maven {
             url "https://repo1.maven.org/maven2"
         }
+        google() 
     }
-
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.0'
+        classpath 'com.android.tools.build:gradle:7.0.0' 
     }
 }
+
 
 allprojects {
     repositories {
