--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -14,8 +14,9 @@ jobs:
         shell: bash
 
     steps:
-    - name: Install GStreamer
+    - name: Install GStreamer if not already installed
       run: sudo apt-get install -y gstreamer1.0-plugins-base
+    
 
     - uses: actions/checkout@v2
     - name: apt
