--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,12 +1,13 @@
 buildscript {
+
     repositories {
-        google()
-        maven {
+        maven  {
             url "https://repo1.maven.org/maven2"
         }
     }
+
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.1.0' 
+        classpath 'com.android.tools.build:gradle:1.1.0'
     }
 }
 
@@ -23,7 +24,22 @@ dependencies {
 }
 
 android {
+    /*******************************************************
+     * The following variables:
+     * - androidBuildToolsVersion,
+     * - androidCompileSdkVersion
+     * - qt5AndroidDir - holds the path to qt android files
+     *                   needed to build any Qt application
+     *                   on Android.
+     *
+     * are defined in gradle.properties file. This file is
+     * updated by QtCreator and androiddeployqt tools.
+     * Changing them manually might break the compilation!
+     *******************************************************/
+
     compileSdkVersion androidCompileSdkVersion.toInteger()
+
+    buildToolsVersion androidBuildToolsVersion
 
     sourceSets {
         main {
@@ -37,21 +53,9 @@ android {
             jniLibs.srcDirs = ['libs']
        }
     }
-    buildTypes {
-        debug {
-            debuggable true
-            minifyEnabled false
-            multiDexEnabled true
-        }
-        release {
-            minifyEnabled false
-            multiDexEnabled true
-        }
-    }
 
     aaptOptions {
         cruncherEnabled = false
-        noCompress ''
     }
 
     lintOptions {
