--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -14,7 +14,6 @@ jobs:
         shell: bash
 
     steps:
-
     - uses: actions/checkout@v2
     - name: apt
       run: sudo apt-get update && sudo apt-get install wget curl    speech-dispatcher    libgstreamer-plugins-base1.0-dev     libgstreamer1.0-0:amd64     libgstreamer1.0-dev     libudev-dev android-sdk ccache
@@ -45,12 +44,12 @@ jobs:
         BITNESS: ${{ matrix.config.BITNESS }}
         GSTREAMER_NAME: ${{ matrix.config.GSTREAMER_NAME }}
         GSTREAMER_VERSION: 1.14.4
-        ANDROID_HOME: /usr/local/lib/android/sdk/cmdline-tools/latest
+        ANDROID_HOME: /usr/local/lib/android/sdk
         ANDROID_NDK_PLATFORM: android-29
       run: |
         set -o xtrace
         
-        export PATH=$ANDROID_HOME/bin:/opt/java/jdk1.8.0_131/bin:$PATH          
+        export PATH=$ANDROID_HOME/tools/bin:/opt/java/jdk1.8.0_131/bin:$PATH          
         
         ccache -s
 
@@ -58,9 +57,9 @@ jobs:
                 
         rm -rf /tmp/shadow_build_dir
 
-        sudo $ANDROID_HOME/bin/sdkmanager "build-tools;25.0.3" "platforms;android-29" "platform-tools" > /dev/null
+        sudo $ANDROID_HOME/tools/bin/sdkmanager "build-tools;25.0.3" "platforms;android-29" "platform-tools" > /dev/null
         
-        wget --quiet https://gstreamer.freedesktop.org/data/pkg/android/${GSTREAMER_VERSION}/gstreamer-1.0-android-universal-${GSTREAMER_VERSION}.tar.bz2 &&
+        wget --quiet https://gstreamer.freedesktop.org/data/pkg/android/1.0.10/gstreamer-1.0-android-arm-1.0.10-debug-runtime.tar.bz2 &&
         mkdir gstreamer-1.0-android-universal-${GSTREAMER_VERSION} &&
         tar xf gstreamer-1.0-android-universal-${GSTREAMER_VERSION}.tar.bz2 -C gstreamer-1.0-android-universal-${GSTREAMER_VERSION}
         
